<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="gameOpponents" type="String"/>
    </data>
<ScrollView android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_event_layout"
            android:orientation="vertical"
    >
        <LinearLayout
                android:paddingEnd="9dp"
                android:paddingStart="9dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"

                    android:id="@+id/event_txt_header"
                    android:text="@string/new_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="2"
                    android:contentDescription="@string/new_event"
                    android:paddingBottom="4dp"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_event_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/new_event_date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_event_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/date"
                        android:inputType="datetime"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/arrive_early"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/arrive_early"/>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_event_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/time"
                        android:inputType="time"
                />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_event_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/duration"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:layout_height="wrap_content"
                    android:id="@+id/new_event_place"
                    android:hint="@string/location"
                    android:textColorHint="#05ab9a"

                    android:dropDownHeight="wrap_content" android:dropDownWidth="match_parent"
                    android:layout_width="match_parent" android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_event_notes"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:hint="@string/notes"
                />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>


        <LinearLayout
                android:paddingEnd="9dp"
                android:paddingStart="9dp"
                android:paddingTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/game_details_header"
                    android:text="@string/new_game_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:maxLines="2"
                    android:contentDescription="@string/new_game_details"
                    android:paddingBottom="4dp"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>


            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/games_quantity"
                    android:hint="@string/games_quantity"
                    android:textColorHint="#05ab9a"
            />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_opponent"
                    android:hint="@string/first_opponent"
                    android:textColorHint="#05ab9a"
                    android:visibility="visible"/>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_opponent"
                    android:hint="@string/second_opponent"
                    android:textColorHint="#05ab9a"
                    android:visibility="visible"
            />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/third_opponent"
                    android:hint="@string/thierd_opponent"
                    android:textColorHint="#05ab9a"
                    android:visibility="visible"
            />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/forth_opponent"
                    android:hint="@string/forth_opponent"
                    android:textColorHint="#05ab9a"
                    android:visibility="visible"
            />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fifth_opponent"
                    android:hint="@string/fifth_opponent"
                    android:textColorHint="#05ab9a"
                    android:visibility="visible"
            />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sixth_opponent"
                    android:hint="@string/sixth_opponent"
                    android:textColorHint="#05ab9a"
                    android:visibility="visible"
            />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_game_notes"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:hint="@string/games_notes"
                />
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />


            <com.dd.CircularProgressButton
                    android:id="@+id/add_event_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/ab__gray_light"
                    android:textSize="18sp"

                    app:cpb_textComplete="@string/event_sucess"
                    app:cpb_selectorComplete="@drawable/complete_state_selector"

                    app:cpb_selectorError="@drawable/error_state_selector"
                    app:cpb_textError="@string/event_error"

                    app:cpb_selectorIdle="@drawable/idle_state_selector"
                    app:cpb_textIdle="@string/add_event_button" />

            <TextView
                    android:text=""
                    android:visibility="invisible"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/dateEventID"/>

                  </LinearLayout>


    </LinearLayout>
</ScrollView>


</layout>