<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >

    <androidx.cardview.widget.CardView
            android:id="@+id/eventRow_cardView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8sp"
            >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="10sp"
                    app:srcCompat="@android:drawable/ic_notification_overlay"
                    android:id="@+id/event_flag"
                    android:layout_marginEnd="5sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/flag"
                    android:layout_marginTop="10sp"
            />

            <!--<TextView-->
                    <!--android:id="@+id/next_event"-->
                    <!--android:text="@string/next_event"-->
                    <!--android:contentDescription="@string/next_event"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--app:layout_constraintTop_toTopOf="parent"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--android:textSize="12sp"/>-->


            <TextView
                    android:text="@string/day_fulldate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/date"
                    android:id="@+id/event_date"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/date"
                    android:id="@+id/event_time"
                    app:layout_constraintStart_toStartOf="@id/event_date"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/event_date"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:id="@+id/event_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/event"
                    android:contentDescription="@string/event"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/event_time"/>

            <TextView
                    android:text="@string/place_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/place_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/place_name"
                    app:layout_constraintTop_toBottomOf="@+id/event_name"
                    android:layout_marginStart="8dp"
            />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130sp"
                    app:srcCompat="@drawable/ic_users"
                    android:id="@+id/map_view"
                    android:contentDescription="@string/location"

                    app:layout_constraintTop_toBottomOf="@+id/place_name"
                    app:layout_constraintHorizontal_bias="0.0"/>


            <Button
                    android:text="@string/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="45sp"
                    android:id="@+id/confirm_button"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/maybe_button"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="@string/maybe"
                    android:layout_width="wrap_content"
                    android:layout_height="45sp"
                    android:id="@+id/maybe_button"
                    app:layout_constraintStart_toEndOf="@+id/confirm_button"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/decline_button"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/decline_button"
                    app:layout_constraintHorizontal_bias="0.485"/>
            <Button
                    android:text="@string/decline"
                    android:layout_width="wrap_content"
                    android:layout_height="45sp"
                    android:id="@+id/decline_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/map_view"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="4dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</layout>